cmake_minimum_required(VERSION 4.0)
project(AOC_25)

set(CMAKE_CXX_STANDARD 14)

add_executable(day1 Day1/SecretEntrance.cpp)
add_executable(day2 Day2/GiftShop.cpp)
add_executable(day3 Day3/Lobby.cpp)
add_executable(day4 Day4/PrintingDepartment.cpp)
add_executable(day5 Day5/Cafeteria.cpp)
add_executable(day6 Day6/TrashCompactor.cpp)
add_executable(day7 Day7/Laboratories.cpp)
add_executable(day8 Day8/Playground.cpp)
add_executable(day9 Day9/MovieTheater.cpp)
add_executable(day10 Day10/Factory.cpp)
